[gd_scene load_steps=6 format=3 uid="uid://cmyxmqdjcmwb3"]

[ext_resource type="Script" uid="uid://t5h1y8kpx6we" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cpsaxvvwqv80r" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bobg7xpot7w8k" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://8vbdgta6t018" path="res://hud.tscn" id="4_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_0xm2m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 498, -6, 0, 0, 0, 0, 493, 729, 0, 0, 0, 0, -13, 731, 0, 0, 0, 0, -23, -16, 0, 0, 0, 0, 498, -5)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_0xm2m")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(498, -6)
rotation = 1.5775989
loop = false

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
